[package]
name = "wallet_nft_mint"
version = "0.1.0"
description = "Wallet Based NFT Mint"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "wallet_nft_mint"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

#add to default for local testing
default = ["local-testing"]
local-testing = []
aurorynet = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ]}
arrayref = "0.3.6"
